--- a/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -121,6 +121,7 @@ LastLevel=/Game/Divinum/Maps/TestMap
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
@@ -140,8 +141,6 @@ RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/Divinum/Blueprints/BP_Gamemode.BP_Gamemode
-OpenAssetsAtExit=/Game/Divinum/Blueprints/BP_PlayerController.BP_PlayerController
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -705,6 +704,7 @@ UMGEditorProjectSettings.Compiler=True
 UMGEditorProjectSettings.Class Filtering=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Designer=True
 AndroidRuntimeSettings.APK Packaging=True
 AndroidRuntimeSettings.App Bundles=True
 AndroidRuntimeSettings.Build=True
@@ -1003,11 +1003,11 @@ UserDefinedStruct.Structure=True
 K2Node_BreakStruct.PinOptions=True
 K2Node_MakeStruct.PinOptions=True
 BP_Player_C.References=True
-UMGEditorProjectSettings.Designer =True
 K2Node_InputAction.Input=True
 K2Node_GetInputAxisValue.Input=True
 K2Node_InputAxisEvent.Input=True
 BP_Gamemode_C.GamePlay=True
+BP_Gamemode_C.Game Play=True
 
 [PathColor]
 /Game/Divinum=(R=0.000000,G=0.467784,B=0.032000,A=1.000000)
@@ -1171,25 +1171,26 @@ LastLogListing=PIE
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Divinum/Blueprints/BP_Gamemode
-MRUItem1=/Game/Divinum/Blueprints/BP_PlayerController
-MRUItem2=/Game/Divinum/Blueprints/BP_Player
-MRUItem3=/Game/Divinum/Blueprints/ST_Player
-MRUItem4=/Game/Divinum/Blueprints/Board/BP_Board
-MRUItem5=/Game/Divinum/Blueprints/Board/BP_BoardSquare
-MRUItem6=/Game/Divinum/Maps/TestMap
-MRUItem7=/Game/Divinum/Materials/M_Lightwood
-MRUItem8=/Game/Divinum/Materials/M_Darkwood
-MRUItem9=/Game/Divinum/Materials/Mi_MarkerAttack
-MRUItem10=/Game/Divinum/Materials/Mi_MarkerHighlight
-MRUItem11=/Game/Divinum/Materials/Mi_MarkerSelect
-MRUItem12=/Game/Divinum/Materials/M_Marker
-MRUItem13=/Game/Divinum/Materials/Mi_TokenPieceBlue
-MRUItem14=/Game/Divinum/Materials/Mi_TokenPieceRed
-MRUItem15=/Game/Divinum/Materials/Mi_SquareLight
-MRUItem16=/Game/Divinum/Materials/Mi_SquareDark
-MRUItem17=/Game/Divinum/Blueprints/En_Color
-MRUItem18=/Game/Divinum/Materials/M_Color
-MRUItem19=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece
+MRUItem1=/Game/Divinum/Blueprints/ST_Move
+MRUItem2=/Game/Divinum/Blueprints/BP_PlayerController
+MRUItem3=/Game/Divinum/Blueprints/BP_Player
+MRUItem4=/Game/Divinum/Blueprints/ST_Player
+MRUItem5=/Game/Divinum/Blueprints/Board/BP_Board
+MRUItem6=/Game/Divinum/Blueprints/Board/BP_BoardSquare
+MRUItem7=/Game/Divinum/Maps/TestMap
+MRUItem8=/Game/Divinum/Materials/M_Lightwood
+MRUItem9=/Game/Divinum/Materials/M_Darkwood
+MRUItem10=/Game/Divinum/Materials/Mi_MarkerAttack
+MRUItem11=/Game/Divinum/Materials/Mi_MarkerHighlight
+MRUItem12=/Game/Divinum/Materials/Mi_MarkerSelect
+MRUItem13=/Game/Divinum/Materials/M_Marker
+MRUItem14=/Game/Divinum/Materials/Mi_TokenPieceBlue
+MRUItem15=/Game/Divinum/Materials/Mi_TokenPieceRed
+MRUItem16=/Game/Divinum/Materials/Mi_SquareLight
+MRUItem17=/Game/Divinum/Materials/Mi_SquareDark
+MRUItem18=/Game/Divinum/Blueprints/En_Color
+MRUItem19=/Game/Divinum/Materials/M_Color
+MRUItem20=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoSave\" \"Object.Blueprints\" "
@@ -1369,6 +1370,11 @@ MovieSceneAnimationTrackRecorderEditorSettings=
 TakeRecorderWorldSourceSettings=
 BP_PlayerController_C=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 K2Node_InputAxisEvent=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
+K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
+UserDefinedStruct=
+ST_Move=
+CreateNotation=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
+CreateNotation_19=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 
 [AssetEditorToolkitTabLocation]
 /Game/Divinum/Blueprints/BP_Gamemode.BP_Gamemode=0
@@ -1391,6 +1397,7 @@ K2Node_InputAxisEvent=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWr
 /Game/Divinum/Materials/M_Lightwood.M_Lightwood=0
 /Game/Divinum/Maps/TestMap.TestMap:PersistentLevel.TestMap=0
 /Game/Divinum/Blueprints/ST_Player.ST_Player=0
+/Game/Divinum/Blueprints/ST_Move.ST_Move=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
