--- a/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -118,7 +118,7 @@ MRUItem0=/Game/Divinum/Maps/TestMap
 LastLevel=/Game/Divinum/Maps/TestMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
@@ -1008,6 +1008,7 @@ K2Node_GetInputAxisValue.Input=True
 K2Node_InputAxisEvent.Input=True
 BP_Gamemode_C.GamePlay=True
 BP_Gamemode_C.Game Play=True
+UMGEditorProjectSettings.Designer =True
 
 [PathColor]
 /Game/Divinum=(R=0.000000,G=0.467784,B=0.032000,A=1.000000)
@@ -1028,7 +1029,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Divinum/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/Divinum/Blueprints/Board
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1210,6 +1211,8 @@ EditorStyleSettings=True
 GeneralProjectSettings=True
 GameMapsSettings=True
 InputSettings=True
+SourceCodeAccessSettings=True
+EnhancedInputDeveloperSettings=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1353,21 +1356,21 @@ BP_Gamemode_C=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.De
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref
 K2Node_SwitchInteger=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref
 K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
-InputModifierDeadZone=
-InputModifierResponseCurveExponential=
-InputModifierFOVScaling=
-InputTriggerDown=
-InputTriggerPressed=
-InputTriggerReleased=
-InputTriggerHold=
-InputTriggerHoldAndRelease=
-InputTriggerTap=
-InputTriggerPulse=
-MovieSceneTakeSettings=
-TakeRecorderMicrophoneAudioSourceSettings=
-TakeRecorderMicrophoneAudioManager=
-MovieSceneAnimationTrackRecorderEditorSettings=
-TakeRecorderWorldSourceSettings=
+InputModifierDeadZone=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RotatePlayerCamera,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveTokenPiece
+InputModifierResponseCurveExponential=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RotatePlayerCamera,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveTokenPiece
+InputModifierFOVScaling=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RotatePlayerCamera,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveTokenPiece
+InputTriggerDown=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RotatePlayerCamera,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveTokenPiece
+InputTriggerPressed=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RotatePlayerCamera,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveTokenPiece
+InputTriggerReleased=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RotatePlayerCamera,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveTokenPiece
+InputTriggerHold=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RotatePlayerCamera,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveTokenPiece
+InputTriggerHoldAndRelease=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RotatePlayerCamera,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveTokenPiece
+InputTriggerTap=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RotatePlayerCamera,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveTokenPiece
+InputTriggerPulse=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RotatePlayerCamera,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveTokenPiece
+MovieSceneTakeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RotatePlayerCamera,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveTokenPiece
+TakeRecorderMicrophoneAudioSourceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RotatePlayerCamera,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveTokenPiece
+TakeRecorderMicrophoneAudioManager=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RotatePlayerCamera,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveTokenPiece
+MovieSceneAnimationTrackRecorderEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RotatePlayerCamera,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveTokenPiece
+TakeRecorderWorldSourceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RotatePlayerCamera,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveTokenPiece
 BP_PlayerController_C=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 K2Node_InputAxisEvent=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
