--- a/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -120,6 +120,7 @@ LastLevel=/Game/Divinum/Maps/TestMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=BlueprintEditor
@@ -141,6 +142,7 @@ RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/Divinum/UI/UI_Main.UI_Main
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -705,6 +707,7 @@ UMGEditorProjectSettings.Class Filtering=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Designer=True
 AndroidRuntimeSettings.APK Packaging=True
 AndroidRuntimeSettings.App Bundles=True
 AndroidRuntimeSettings.Build=True
@@ -1008,7 +1011,36 @@ K2Node_GetInputAxisValue.Input=True
 K2Node_InputAxisEvent.Input=True
 BP_Gamemode_C.GamePlay=True
 BP_Gamemode_C.Game Play=True
-UMGEditorProjectSettings.Designer =True
+VerticalBox.Behavior=True
+VerticalBox.Accessibility=True
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Rendering=True
+VerticalBox.Navigation=True
+VerticalBox.Localization=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Rendering=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+UI_Main_C.Appearance=True
+UI_Main_C.Input=True
+UI_Main_C.Interaction=True
+UI_Main_C.Designer=True
+UI_Main_C.Performance=True
+UI_Main_C.Layout=True
+UI_Main_C.Behavior=True
+UI_Main_C.Render Transform=True
+UI_Main_C.Localization=True
+UI_Main_C.Accessibility=True
+UI_Main_C.Rendering=True
+UI_Main_C.Navigation=True
 
 [PathColor]
 /Game/Divinum=(R=0.000000,G=0.467784,B=0.032000,A=1.000000)
@@ -1029,7 +1061,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Divinum/Blueprints/Board
+ContentBrowserDrawer.SelectedPaths=/Game/Divinum/UI/Fonts
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1171,27 +1203,28 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Divinum/Blueprints/BP_Gamemode
-MRUItem1=/Game/Divinum/Blueprints/ST_Move
-MRUItem2=/Game/Divinum/Blueprints/BP_PlayerController
-MRUItem3=/Game/Divinum/Blueprints/BP_Player
-MRUItem4=/Game/Divinum/Blueprints/ST_Player
-MRUItem5=/Game/Divinum/Blueprints/Board/BP_Board
-MRUItem6=/Game/Divinum/Blueprints/Board/BP_BoardSquare
-MRUItem7=/Game/Divinum/Maps/TestMap
-MRUItem8=/Game/Divinum/Materials/M_Lightwood
-MRUItem9=/Game/Divinum/Materials/M_Darkwood
-MRUItem10=/Game/Divinum/Materials/Mi_MarkerAttack
-MRUItem11=/Game/Divinum/Materials/Mi_MarkerHighlight
-MRUItem12=/Game/Divinum/Materials/Mi_MarkerSelect
-MRUItem13=/Game/Divinum/Materials/M_Marker
-MRUItem14=/Game/Divinum/Materials/Mi_TokenPieceBlue
-MRUItem15=/Game/Divinum/Materials/Mi_TokenPieceRed
-MRUItem16=/Game/Divinum/Materials/Mi_SquareLight
-MRUItem17=/Game/Divinum/Materials/Mi_SquareDark
-MRUItem18=/Game/Divinum/Blueprints/En_Color
-MRUItem19=/Game/Divinum/Materials/M_Color
-MRUItem20=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece
+MRUItem0=/Game/Divinum/UI/UI_Main
+MRUItem1=/Game/Divinum/Blueprints/BP_Gamemode
+MRUItem2=/Game/Divinum/Blueprints/ST_Move
+MRUItem3=/Game/Divinum/Blueprints/BP_PlayerController
+MRUItem4=/Game/Divinum/Blueprints/BP_Player
+MRUItem5=/Game/Divinum/Blueprints/ST_Player
+MRUItem6=/Game/Divinum/Blueprints/Board/BP_Board
+MRUItem7=/Game/Divinum/Blueprints/Board/BP_BoardSquare
+MRUItem8=/Game/Divinum/Maps/TestMap
+MRUItem9=/Game/Divinum/Materials/M_Lightwood
+MRUItem10=/Game/Divinum/Materials/M_Darkwood
+MRUItem11=/Game/Divinum/Materials/Mi_MarkerAttack
+MRUItem12=/Game/Divinum/Materials/Mi_MarkerHighlight
+MRUItem13=/Game/Divinum/Materials/Mi_MarkerSelect
+MRUItem14=/Game/Divinum/Materials/M_Marker
+MRUItem15=/Game/Divinum/Materials/Mi_TokenPieceBlue
+MRUItem16=/Game/Divinum/Materials/Mi_TokenPieceRed
+MRUItem17=/Game/Divinum/Materials/Mi_SquareLight
+MRUItem18=/Game/Divinum/Materials/Mi_SquareDark
+MRUItem19=/Game/Divinum/Blueprints/En_Color
+MRUItem20=/Game/Divinum/Materials/M_Color
+MRUItem21=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoSave\" \"Object.Blueprints\" "
@@ -1401,6 +1434,7 @@ CreateNotation_19=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrappe
 /Game/Divinum/Maps/TestMap.TestMap:PersistentLevel.TestMap=0
 /Game/Divinum/Blueprints/ST_Player.ST_Player=0
 /Game/Divinum/Blueprints/ST_Move.ST_Move=0
+/Game/Divinum/UI/UI_Main.UI_Main=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2743,4 +2777,96 @@ InstalledPlugins=WMFCodecs
 
 [DetailCategoriesAdvanced]
 StaticMeshActor.Actor=True
+
+[WidgetTemplatesExpanded]
+Audio=False
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[UMGEditor.Designer]
+bCommonResolutionSelected=False
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+bLeftMouseDragDoesMarquee=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bResetPlayheadWhenNavigating=False
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowLayerBars=True
+bShowKeyBars=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bShowStatusBar=True
+bShowTickLines=True
+bShowSequencerToolbar=True
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+SectionColorTints=(B=142,G=102,R=88,A=255)
+SectionColorTints=(B=132,G=137,R=99,A=255)
+SectionColorTints=(B=92,G=127,R=110,A=255)
+SectionColorTints=(B=102,G=142,R=151,A=255)
+SectionColorTints=(B=101,G=119,R=147,A=255)
+SectionColorTints=(B=108,G=95,R=139,A=255)
+SectionColorTints=(B=121,G=74,R=109,A=255)
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
+bAutoExpandNodesOnSelection=True
+TreeViewWidth=0.300000
 
