Added Player UI
This includes player name, side, capture/kill count

--- a/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -118,7 +118,7 @@ MRUItem0=/Game/Divinum/Maps/TestMap
 LastLevel=/Game/Divinum/Maps/TestMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1011,7 +1011,7 @@ K2Node_GetInputAxisValue.Input=True
 K2Node_InputAxisEvent.Input=True
 BP_Gamemode_C.GamePlay=True
 BP_Gamemode_C.Game Play=True
-VerticalBox.Behavior=True
+VerticalBox.Behavior=False
 VerticalBox.Accessibility=True
 VerticalBox.Render Transform=True
 VerticalBox.Performance=True
@@ -1041,6 +1041,27 @@ UI_Main_C.Localization=True
 UI_Main_C.Accessibility=True
 UI_Main_C.Rendering=True
 UI_Main_C.Navigation=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Accessibility=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Rendering=True
+Border.Navigation=True
+Border.Localization=True
+Border.Events=True
+VerticalBox.Layout=True
+Spacer.Layout=True
+Spacer.Appearance=True
+Spacer.Accessibility=True
+Spacer.Behavior=True
+Spacer.Render Transform=True
+Spacer.Performance=True
+Spacer.Rendering=True
+Spacer.Navigation=True
+Spacer.Localization=True
 
 [PathColor]
 /Game/Divinum=(R=0.000000,G=0.467784,B=0.032000,A=1.000000)
@@ -1228,7 +1249,7 @@ MRUItem21=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoSave\" \"Object.Blueprints\" "
-Object=
+Object="\"Object.Render Transform.RenderTransform\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[1].Parameters.Parameters[0].Object.ParameterValue\" "
@@ -1238,6 +1259,17 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BP_Player_C=
 Pawn=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" "
+TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Margin\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Margin\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Render Transform.RenderTransform\" "
+VerticalBox="\"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Render Transform.RenderTransform\" "
+Border="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+Spacer="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+UI_Main_C=
+UserWidget=
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1386,7 +1418,7 @@ K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapp
 K2Node_BreakStruct=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 BP_Gamemode_C=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
-K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref
+K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 K2Node_SwitchInteger=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref
 K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 InputModifierDeadZone=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RotatePlayerCamera,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveTokenPiece
@@ -1411,6 +1443,7 @@ UserDefinedStruct=
 ST_Move=
 CreateNotation=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 CreateNotation_19=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
+UI_Main_C=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 
 [AssetEditorToolkitTabLocation]
 /Game/Divinum/Blueprints/BP_Gamemode.BP_Gamemode=0
@@ -2750,6 +2783,8 @@ Voice.TimeStamp=2023.09.15-21.02.54
 Voice.LastCompileMethod=External
 MovieSceneCapture.TimeStamp=2023.09.15-21.02.46
 MovieSceneCapture.LastCompileMethod=External
+SequencerWidgets.TimeStamp=2023.09.15-21.02.48
+SequencerWidgets.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -2777,6 +2812,13 @@ InstalledPlugins=WMFCodecs
 
 [DetailCategoriesAdvanced]
 StaticMeshActor.Actor=True
+TextBlock.Appearance=True
+TextBlock.Performance=False
+TextBlock.Behavior=False
+Border.Appearance=False
+Border.Accessibility=False
+VerticalBox.Behavior=False
+VerticalBox.Accessibility=False
 
 [WidgetTemplatesExpanded]
 Audio=False
