Player UI animation and playercontroller Main UI
animation to fade in UI and control it through the playercontroller. ran into error however

--- a/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -122,8 +122,8 @@ CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=BlueprintEditor
@@ -142,7 +142,6 @@ RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/Divinum/UI/UI_Main.UI_Main
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -1011,7 +1010,7 @@ K2Node_GetInputAxisValue.Input=True
 K2Node_InputAxisEvent.Input=True
 BP_Gamemode_C.GamePlay=True
 BP_Gamemode_C.Game Play=True
-VerticalBox.Behavior=False
+VerticalBox.Behavior=True
 VerticalBox.Accessibility=True
 VerticalBox.Render Transform=True
 VerticalBox.Performance=True
@@ -1225,9 +1224,9 @@ LastLogListing=PIE
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Divinum/UI/UI_Main
-MRUItem1=/Game/Divinum/Blueprints/BP_Gamemode
-MRUItem2=/Game/Divinum/Blueprints/ST_Move
-MRUItem3=/Game/Divinum/Blueprints/BP_PlayerController
+MRUItem1=/Game/Divinum/Blueprints/BP_PlayerController
+MRUItem2=/Game/Divinum/Blueprints/BP_Gamemode
+MRUItem3=/Game/Divinum/Blueprints/ST_Move
 MRUItem4=/Game/Divinum/Blueprints/BP_Player
 MRUItem5=/Game/Divinum/Blueprints/ST_Player
 MRUItem6=/Game/Divinum/Blueprints/Board/BP_Board
@@ -1249,7 +1248,7 @@ MRUItem21=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoSave\" \"Object.Blueprints\" "
-Object="\"Object.Render Transform.RenderTransform\" "
+Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[1].Parameters.Parameters[0].Object.ParameterValue\" "
@@ -1259,10 +1258,10 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BP_Player_C=
 Pawn=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" "
-TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Margin\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
-TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Margin\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" "
+Widget=
+Visual=
 VerticalBox="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
 Border="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
@@ -2817,7 +2816,7 @@ TextBlock.Performance=False
 TextBlock.Behavior=False
 Border.Appearance=False
 Border.Accessibility=False
-VerticalBox.Behavior=False
+VerticalBox.Behavior=True
 VerticalBox.Accessibility=False
 
 [WidgetTemplatesExpanded]
@@ -2833,6 +2832,7 @@ Special Effects=False
 Synth=False
 User Created=False
 Advanced=False
+Common=False
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
