--- a/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -118,7 +118,7 @@ MRUItem0=/Game/Divinum/Maps/TestMap
 LastLevel=/Game/Divinum/Maps/TestMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1067,6 +1067,7 @@ Spacer.Localization=True
 /Game/Divinum/Blueprints=(R=0.000000,G=0.192327,B=0.467784,A=1.000000)
 /Game/Divinum/Blueprints/TokenPieces=(R=0.000000,G=0.192327,B=0.467784,A=1.000000)
 /Game/Divinum/Blueprints/Board=(R=0.000000,G=0.192327,B=0.467784,A=1.000000)
+/Game/Divinum/Scripts=(R=0.467784,G=0.000000,B=0.048105,A=1.000000)
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1081,7 +1082,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Divinum/UI/Fonts
+ContentBrowserDrawer.SelectedPaths=/Game/Divinum/Scripts
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1703,7 +1704,7 @@ PrimType=2
 [RootWindow]
 ScreenPosition=X=319.000 Y=183.000
 WindowSize=X=1276.000 Y=668.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [Directories2]
 UNR=../../../../../DIVINUM/VIDEOGAME/divinum/Divinum/Content/Divinum/Maps
@@ -2784,6 +2785,10 @@ MovieSceneCapture.TimeStamp=2023.09.15-21.02.46
 MovieSceneCapture.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2023.09.15-21.02.48
 SequencerWidgets.LastCompileMethod=Unknown
+Divinum.TimeStamp=2023.10.24-18.28.42
+Divinum.LastCompileMethod=Unknown
+NullDrv.TimeStamp=2023.09.15-21.02.46
+NullDrv.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
