--- a/Divinum/Config/DefaultInput.ini
+++ b/Divinum/Config/DefaultInput.ini
@@ -79,6 +79,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="MoveTokenPiece",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="MoveF",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +AxisMappings=(AxisName="RotatePlayerCamera",Scale=1.000000,Key=A)
 +AxisMappings=(AxisName="RotatePlayerCamera",Scale=-1.000000,Key=S)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
