Blueprints for updating square highlights
Setting up frame for highlighting available squares based on token piece

--- a/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -120,6 +120,8 @@ LastLevel=/Game/Divinum/Maps/TestMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -132,7 +134,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=UserDefinedStructureEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -146,10 +147,7 @@ RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/Divinum/Blueprints/BP_Gamemode.BP_Gamemode
-OpenAssetsAtExit=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece.BP_TokenPiece
-OpenAssetsAtExit=/Game/Divinum/Blueprints/BP_PlayerController.BP_PlayerController
-OpenAssetsAtExit=/Game/Divinum/Blueprints/BP_Player.BP_Player
+OpenAssetsAtExit=/Game/Divinum/Blueprints/Board/BP_BoardSquare.BP_BoardSquare
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -1340,32 +1338,33 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Divinum/UI/UI_Main
-MRUItem1=/Game/Divinum/Blueprints/BP_Player
-MRUItem2=/Game/Divinum/Blueprints/BP_PlayerController
-MRUItem3=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece
-MRUItem4=/Game/Divinum/Blueprints/BP_Gamemode
-MRUItem5=/Game/MyDefaultToken
-MRUItem6=/Game/Divinum/Blueprints/Mouse_PlayerController
-MRUItem7=/Game/Divinum/Blueprints/ST_Move
-MRUItem8=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPieceV2
-MRUItem9=/Game/Divinum/Blueprints/Board/BP_Board
-MRUItem10=/Engine/BasicShapes/Sphere
-MRUItem11=/Game/Divinum/Blueprints/ST_Player
-MRUItem12=/Game/Divinum/Blueprints/Board/BP_BoardSquare
-MRUItem13=/Game/Divinum/Maps/TestMap
-MRUItem14=/Game/Divinum/Materials/M_Lightwood
-MRUItem15=/Game/Divinum/Materials/M_Darkwood
-MRUItem16=/Game/Divinum/Materials/Mi_MarkerAttack
-MRUItem17=/Game/Divinum/Materials/Mi_MarkerHighlight
-MRUItem18=/Game/Divinum/Materials/Mi_MarkerSelect
-MRUItem19=/Game/Divinum/Materials/M_Marker
-MRUItem20=/Game/Divinum/Materials/Mi_TokenPieceBlue
-MRUItem21=/Game/Divinum/Materials/Mi_TokenPieceRed
-MRUItem22=/Game/Divinum/Materials/Mi_SquareLight
-MRUItem23=/Game/Divinum/Materials/Mi_SquareDark
-MRUItem24=/Game/Divinum/Blueprints/En_Color
-MRUItem25=/Game/Divinum/Materials/M_Color
+MRUItem0=/Game/Divinum/Materials/Mi_MarkerTokenPiece
+MRUItem1=/Game/Divinum/Blueprints/Board/BP_BoardSquare
+MRUItem2=/Game/Divinum/UI/UI_Main
+MRUItem3=/Game/Divinum/Blueprints/BP_Player
+MRUItem4=/Game/Divinum/Blueprints/BP_PlayerController
+MRUItem5=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece
+MRUItem6=/Game/Divinum/Blueprints/BP_Gamemode
+MRUItem7=/Game/MyDefaultToken
+MRUItem8=/Game/Divinum/Blueprints/Mouse_PlayerController
+MRUItem9=/Game/Divinum/Blueprints/ST_Move
+MRUItem10=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPieceV2
+MRUItem11=/Game/Divinum/Blueprints/Board/BP_Board
+MRUItem12=/Engine/BasicShapes/Sphere
+MRUItem13=/Game/Divinum/Blueprints/ST_Player
+MRUItem14=/Game/Divinum/Maps/TestMap
+MRUItem15=/Game/Divinum/Materials/M_Lightwood
+MRUItem16=/Game/Divinum/Materials/M_Darkwood
+MRUItem17=/Game/Divinum/Materials/Mi_MarkerAttack
+MRUItem18=/Game/Divinum/Materials/Mi_MarkerHighlight
+MRUItem19=/Game/Divinum/Materials/Mi_MarkerSelect
+MRUItem20=/Game/Divinum/Materials/M_Marker
+MRUItem21=/Game/Divinum/Materials/Mi_TokenPieceBlue
+MRUItem22=/Game/Divinum/Materials/Mi_TokenPieceRed
+MRUItem23=/Game/Divinum/Materials/Mi_SquareLight
+MRUItem24=/Game/Divinum/Materials/Mi_SquareDark
+MRUItem25=/Game/Divinum/Blueprints/En_Color
+MRUItem26=/Game/Divinum/Materials/M_Color
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoSave\" \"Object.Blueprints\" "
@@ -1530,7 +1529,7 @@ TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDet
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RotatePlayerCamera,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveTokenPiece
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.RotatePlayerCamera,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveTokenPiece
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values
-MaterialInstanceConstant=
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 BP_Player_C=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 EdGraph=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
@@ -1565,6 +1564,7 @@ CreateNotation=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.D
 CreateNotation_19=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 UI_Main_C=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
+BP_BoardSquare_C=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 
 [AssetEditorToolkitTabLocation]
 /Game/Divinum/Blueprints/BP_Gamemode.BP_Gamemode=0
@@ -1594,6 +1594,7 @@ K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWr
 /Game/Divinum/Blueprints/Mouse_GM.Mouse_GM=0
 /Game/Divinum/Blueprints/Mouse_PlayerController.Mouse_PlayerController=0
 /Game/MyDefaultToken.MyDefaultToken=0
+/Game/Divinum/Materials/Mi_MarkerTokenPiece.Mi_MarkerTokenPiece=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1823,7 +1824,7 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=2
 
