--- a/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -118,34 +118,37 @@ MRUItem0=/Game/Divinum/Maps/TestMap
 LastLevel=/Game/Divinum/Maps/TestMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=UserDefinedStructureEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=EnumEditor
-RecentAssetEditors=MaterialEditor
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+OpenAssetsAtExit=/Game/Divinum/Blueprints/Board/BP_Board.BP_Board
+OpenAssetsAtExit=/Game/Divinum/Blueprints/Board/BP_BoardSquare.BP_BoardSquare
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -712,6 +715,7 @@ UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Designer=True
 AndroidRuntimeSettings.APK Packaging=True
 AndroidRuntimeSettings.App Bundles=True
 AndroidRuntimeSettings.Build=True
@@ -1147,9 +1151,13 @@ K2Node_Composite.Inputs=True
 K2Node_Composite.Outputs=True
 BP_TokenPieceV2_C.TransformCommon=True
 BP_TokenPieceV2_C.Networking=True
-UMGEditorProjectSettings.Designer =True
 BP_TokenPiece_C.Camera=True
 BP_TokenPiece_C.Pawn=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
 
 [PathColor]
 /Game/Divinum=(R=0.000000,G=0.467784,B=0.032000,A=1.000000)
@@ -1171,7 +1179,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Divinum/Blueprints/TokenPieces
+ContentBrowserDrawer.SelectedPaths=/Game/Divinum/Blueprints/Board
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1339,13 +1347,13 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Divinum/Blueprints/Board/BP_Board
-MRUItem1=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPieceV2
-MRUItem2=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece
-MRUItem3=/Game/Divinum/Blueprints/BP_Gamemode
-MRUItem4=/Game/Divinum/Blueprints/Mouse_PlayerController
-MRUItem5=/Game/Divinum/Blueprints/BP_PlayerController
-MRUItem6=/Game/Divinum/Blueprints/Board/BP_BoardSquare
+MRUItem0=/Game/Divinum/Blueprints/Board/BP_BoardSquare
+MRUItem1=/Game/Divinum/Blueprints/Board/BP_Board
+MRUItem2=/Game/Divinum/Blueprints/BP_PlayerController
+MRUItem3=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPieceV2
+MRUItem4=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece
+MRUItem5=/Game/Divinum/Blueprints/BP_Gamemode
+MRUItem6=/Game/Divinum/Blueprints/Mouse_PlayerController
 MRUItem7=/Game/Divinum/Materials/Mi_MarkerTokenPiece
 MRUItem8=/Game/Divinum/UI/UI_Main
 MRUItem9=/Game/Divinum/Blueprints/BP_Player
@@ -1569,6 +1577,11 @@ BP_BoardSquare_C=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper
 BillboardComponent=
 StaticMeshComponent=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 BP_Board_C=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
+GetHighlightedSquares=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
+GetHighlightedSquares_11=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
+SelectSquare=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
+SelectSquare_12=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
+K2Node=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 
 [AssetEditorToolkitTabLocation]
 /Game/Divinum/Blueprints/BP_Gamemode.BP_Gamemode=0
@@ -3049,4 +3062,7 @@ FrameNumberDisplayFormat=Seconds
 MovieRendererName=
 bAutoExpandNodesOnSelection=True
 TreeViewWidth=0.300000
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
 
