--- a/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -147,7 +147,7 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-OpenAssetsAtExit=/Game/Divinum/Blueprints/BP_Gamemode.BP_Gamemode
+OpenAssetsAtExit=/Game/Divinum/Blueprints/Board/BP_BoardSquare.BP_BoardSquare
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -1347,9 +1347,9 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Divinum/Blueprints/BP_Gamemode
-MRUItem1=/Game/Divinum/Blueprints/Board/BP_Board
-MRUItem2=/Game/Divinum/Blueprints/Board/BP_BoardSquare
+MRUItem0=/Game/Divinum/Blueprints/Board/BP_BoardSquare
+MRUItem1=/Game/Divinum/Blueprints/BP_Gamemode
+MRUItem2=/Game/Divinum/Blueprints/Board/BP_Board
 MRUItem3=/Game/Divinum/Blueprints/BP_PlayerController
 MRUItem4=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPieceV2
 MRUItem5=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece
@@ -2929,8 +2929,8 @@ MovieSceneCapture.TimeStamp=2023.09.15-21.02.46
 MovieSceneCapture.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2023.09.15-21.02.48
 SequencerWidgets.LastCompileMethod=Unknown
-Divinum.TimeStamp=2023.10.24-19.20.23
-Divinum.LastCompileMethod=Unknown
+Divinum.TimeStamp=2023.11.24-21.47.16
+Divinum.LastCompileMethod=External
 NullDrv.TimeStamp=2023.09.15-21.02.46
 NullDrv.LastCompileMethod=Unknown
 
