Managing Occupants through Board
using BP_Board blueprint to manage occupants

--- a/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -148,6 +148,8 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 OpenAssetsAtExit=/Game/Divinum/Blueprints/Board/BP_BoardSquare.BP_BoardSquare
+OpenAssetsAtExit=/Game/Divinum/Blueprints/Board/BP_Board.BP_Board
+OpenAssetsAtExit=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece.BP_TokenPiece
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -1383,12 +1385,12 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Divinum/Blueprints/Board/BP_BoardSquare
-MRUItem1=/Game/Divinum/Blueprints/BP_Gamemode
-MRUItem2=/Game/Divinum/Blueprints/Board/BP_Board
-MRUItem3=/Game/Divinum/Blueprints/BP_PlayerController
-MRUItem4=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPieceV2
-MRUItem5=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece
+MRUItem0=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece
+MRUItem1=/Game/Divinum/Blueprints/Board/BP_Board
+MRUItem2=/Game/Divinum/Blueprints/Board/BP_BoardSquare
+MRUItem3=/Game/Divinum/Blueprints/BP_Gamemode
+MRUItem4=/Game/Divinum/Blueprints/BP_PlayerController
+MRUItem5=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPieceV2
 MRUItem6=/Game/Divinum/Blueprints/Mouse_PlayerController
 MRUItem7=/Game/Divinum/Materials/Mi_MarkerTokenPiece
 MRUItem8=/Game/Divinum/UI/UI_Main
@@ -1618,6 +1620,7 @@ GetHighlightedSquares_11=PropertyWrapper.DefaultValueCategory.Player0Ref,Propert
 SelectSquare=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 SelectSquare_12=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 K2Node=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
+BP_TokenPiece_C=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 
 [AssetEditorToolkitTabLocation]
 /Game/Divinum/Blueprints/BP_Gamemode.BP_Gamemode=0
