Game mode manage pieces
Using game mode blueprint to manage all the pieces and their occupied status on the board

--- a/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Divinum/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -123,8 +123,6 @@ DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
-RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
@@ -147,9 +145,11 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-OpenAssetsAtExit=/Game/Divinum/Blueprints/Board/BP_BoardSquare.BP_BoardSquare
-OpenAssetsAtExit=/Game/Divinum/Blueprints/Board/BP_Board.BP_Board
+RecentAssetEditors=
+RecentAssetEditors=
 OpenAssetsAtExit=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece.BP_TokenPiece
+OpenAssetsAtExit=/Game/Divinum/Blueprints/BP_Gamemode.BP_Gamemode
+OpenAssetsAtExit=/Game/Divinum/Blueprints/Board/BP_Board.BP_Board
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -445,7 +445,7 @@ EdGraph.Outputs=True
 K2Node_FunctionEntry.GraphNodeDetail=True
 K2Node_FunctionEntry.Graph=True
 K2Node_FunctionEntry.Inputs=True
-K2Node_FunctionEntry.Outputs=True
+K2Node_FunctionEntry.Outputs=False
 BP_Player_C.Pawn=True
 BP_Player_C.Tick=True
 BP_Player_C.Camera=True
@@ -1386,9 +1386,9 @@ LastLogListing=PIE
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPiece
-MRUItem1=/Game/Divinum/Blueprints/Board/BP_Board
-MRUItem2=/Game/Divinum/Blueprints/Board/BP_BoardSquare
-MRUItem3=/Game/Divinum/Blueprints/BP_Gamemode
+MRUItem1=/Game/Divinum/Blueprints/BP_Gamemode
+MRUItem2=/Game/Divinum/Blueprints/Board/BP_Board
+MRUItem3=/Game/Divinum/Blueprints/Board/BP_BoardSquare
 MRUItem4=/Game/Divinum/Blueprints/BP_PlayerController
 MRUItem5=/Game/Divinum/Blueprints/TokenPieces/BP_TokenPieceV2
 MRUItem6=/Game/Divinum/Blueprints/Mouse_PlayerController
@@ -1579,7 +1579,7 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Gl
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 BP_Player_C=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
-EdGraph=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
+EdGraph=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref,EdGraph.Inputs.9416A45341FBD16D24E5E78949C3624F
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 K2Node_BreakStruct=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
@@ -1620,7 +1620,7 @@ GetHighlightedSquares_11=PropertyWrapper.DefaultValueCategory.Player0Ref,Propert
 SelectSquare=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 SelectSquare_12=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
 K2Node=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
-BP_TokenPiece_C=PropertyWrapper.DefaultValueCategory.Player0Ref,PropertyWrapper.DefaultValueCategory.Player1Ref,K2Node_VariableGet.DefaultValueCategory.Player0Ref,K2Node_VariableGet.DefaultValueCategory.Player1Ref,K2Node_VariableSet.DefaultValueCategory.Player0Ref,K2Node_VariableSet.DefaultValueCategory.Player1Ref
+BP_TokenPiece_C=
 
 [AssetEditorToolkitTabLocation]
 /Game/Divinum/Blueprints/BP_Gamemode.BP_Gamemode=0
